force-app/main/default/objects/Opportunity/fields/Company_Region__c.field-meta.xml
<CustomField>
    <fullName>Company_Region__c</fullName>
    <formula>TEXT(Account.Company_Region__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company Region</label>
    <type>Text</type>
</CustomField>