force-app/main/default/objects/Opportunity/fields/Competitive_Provider__c.field-meta.xml
<CustomField>
    <fullName>Competitive_Provider__c</fullName>
    <label>Competitive Provider</label>
    <length>255</length>
    <type>Text</type>
</CustomField>