force-app/main/default/objects/Opportunity/fields/Cruciate_Surgery_Procedures__c.field-meta.xml
<CustomField>
    <fullName>Cruciate_Surgery_Procedures__c</fullName>
    <label>Cruciate Surgery Procedures</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DeAngelis</fullName>
            </value>
            <value>
                <fullName>TTA</fullName>
            </value>
            <value>
                <fullName>TPLO</fullName>
            </value>
            <value>
                <fullName>TTO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>