force-app/main/default/objects/Opportunity/fields/Current_PIMS__c.field-meta.xml
<CustomField>
    <fullName>Current_PIMS__c</fullName>
    <label>Current PIMS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>