force-app/main/default/objects/Opportunity/fields/Data_Migration_Conversion_Key__c.field-meta.xml
<CustomField>
    <fullName>Data_Migration_Conversion_Key__c</fullName>
    <externalId>true</externalId>
    <label>Data Migration Conversion Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>