force-app/main/default/objects/Opportunity/fields/Date_Paperwork_Sent__c.field-meta.xml
<CustomField>
    <fullName>Date_Paperwork_Sent__c</fullName>
    <label>Date Paperwork Sent</label>
    <type>Date</type>
</CustomField>