force-app/main/default/objects/Opportunity/fields/Decision_Maker_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Decision_Maker_Agreement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Decision Maker Agreement</label>
    <type>Checkbox</type>
</CustomField>