force-app/main/default/objects/Opportunity/fields/Demo_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Demo_Completed_Date__c</fullName>
    <label>Demo Completed Date</label>
    <type>Date</type>
</CustomField>