force-app/main/default/objects/Opportunity/fields/Experlogix_Tax__c.field-meta.xml
<CustomField>
    <fullName>Experlogix_Tax__c</fullName>
    <description>Used to store the tax from Experlogix</description>
    <label>Experlogix Tax</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>