force-app/main/default/objects/Opportunity/fields/Further_Orthopaedics_Education__c.field-meta.xml
<CustomField>
    <fullName>Further_Orthopaedics_Education__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Further Orthopaedics Education?</label>
    <type>Checkbox</type>
</CustomField>