force-app/main/default/objects/Opportunity/fields/Implementation_Team_RH__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Team_RH__c</fullName>
    <description>Used to drive process to assign work item to the correct Implementation team based on the product that is sold</description>
    <label>Implementation Team Rollup</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>