force-app/main/default/objects/Opportunity/fields/Lead_Source_Marketing__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_Marketing__c</fullName>
    <label>Lead Source - Marketing</label>
    <length>255</length>
    <type>Text</type>
</CustomField>