force-app/main/default/objects/Opportunity/fields/Line_of_Business__c.field-meta.xml
<CustomField>
    <fullName>Line_of_Business__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Line of Business</label>
    <referenceTo>Line_of_Business__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>