force-app/main/default/objects/Opportunity/fields/Line_Of_Business_Account__c.field-meta.xml
<CustomField>
    <fullName>Line_Of_Business_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Line Of Business Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Line_Of_Business_Account__c.Account__c</field>
            <operation>equals</operation>
            <valueField>$Source.AccountId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Line_Of_Business_Account__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>