force-app/main/default/objects/Opportunity/fields/Main_Orthopaedic_Surgeon__c.field-meta.xml
<CustomField>
    <fullName>Main_Orthopaedic_Surgeon__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Who is the main orthopaedic surgeon?</inlineHelpText>
    <label>Main Orthopaedic Surgeon</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>