force-app/main/default/objects/Opportunity/fields/Number_of_Client_E_mails__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Client_E_mails__c</fullName>
    <label>Number of Client E-mails</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>