force-app/main/default/objects/Opportunity/fields/Orthopaedic_Implant_Provider__c.field-meta.xml
<CustomField>
    <fullName>Orthopaedic_Implant_Provider__c</fullName>
    <label>Orthopaedic Implant Provider</label>
    <length>255</length>
    <type>Text</type>
</CustomField>