force-app/main/default/objects/Opportunity/fields/Orthopaedic_Surgery__c.field-meta.xml
<CustomField>
    <fullName>Orthopaedic_Surgery__c</fullName>
    <label>Orthopaedic Surgery (%)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>