force-app/main/default/objects/Opportunity/fields/Other_Cruciate_Surgery_Procedures__c.field-meta.xml
<CustomField>
    <fullName>Other_Cruciate_Surgery_Procedures__c</fullName>
    <inlineHelpText>Please enter any other cruciate surgery procedures that are not provided above.</inlineHelpText>
    <label>Other Cruciate Surgery Procedures</label>
    <length>255</length>
    <type>Text</type>
</CustomField>