force-app/main/default/objects/Opportunity/fields/Price_Difference__c.field-meta.xml
<CustomField>
    <fullName>Price_Difference__c</fullName>
    <formula>IF( Total_Sales_Price__c == Total_List_Price__c ,FALSE,TRUE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Price Difference</label>
    <type>Checkbox</type>
</CustomField>