force-app/main/default/objects/Opportunity/fields/Surgical_Caseload_Revenue_Contribution__c.field-meta.xml
<CustomField>
    <fullName>Surgical_Caseload_Revenue_Contribution__c</fullName>
    <label>Surgical Caseload Revenue Contribution</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Less than 25%</fullName>
            </value>
            <value>
                <fullName>Between 25% and 50%</fullName>
            </value>
            <value>
                <fullName>Greater than 50%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>