force-app/main/default/objects/Opportunity/fields/Timeline_for_Decision__c.field-meta.xml
<CustomField>
    <fullName>Timeline_for_Decision__c</fullName>
    <label>Timeline for Decision</label>
    <type>Date</type>
</CustomField>