force-app/main/default/objects/Opportunity/fields/Total_List_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_List_Price__c</fullName>
    <label>Total List Price</label>
    <summarizedField>OpportunityLineItem.ListPrice</summarizedField>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>