force-app/main/default/objects/Opportunity/recordTypes/VI_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>VI_Opportunity</fullName>
    <active>true</active>
    <businessProcess>Customer Operations</businessProcess>
    <label>VI Opportunity</label>
</RecordType>