force-app/main/default/objects/Opportunity/recordTypes/Wholesale_Distribution.recordType-meta.xml
<RecordType>
    <fullName>Wholesale_Distribution</fullName>
    <active>true</active>
    <businessProcess>Customer Operations</businessProcess>
    <label>Wholesale Distribution</label>
</RecordType>