force-app/main/default/objects/Opportunity/validationRules/Fields_Required_for_Negotiation_Stage.validationRule-meta.xml
<ValidationRule>
    <fullName>Fields_Required_for_Negotiation_Stage</fullName>
    <active>false</active>
    <errorConditionFormula>AND ( 
ISPICKVAL(StageName, &quot;Negotiation&quot;),
(ISBLANK( Amount ) || 
ISBLANK( CloseDate ) || 
ISBLANK( ExpectedRevenue )))</errorConditionFormula>
    <errorMessage>In order to move out of Stage “Presentation”, you must fill out the following fields: Amount, Expected Revenue.</errorMessage>
</ValidationRule>