force-app/main/default/objects/Opportunity/validationRules/Fields_Required_for_QuoteANZUK_Stage.validationRule-meta.xml
<ValidationRule>
    <fullName>Fields_Required_for_QuoteANZUK_Stage</fullName>
    <active>true</active>
    <description>Required for changing the stage from &#39;Presentation&#39; to &#39;Negotiation-GSS&#39; CCRM-41
10/28/19 - Updated via CCRM-2128. The Sales process has changed to have Quote , so the validation rule has been updated- 01/24/2020, Updating via CCRM-3500</description>
    <errorConditionFormula>AND ( $RecordType.Name = &quot;Technology&quot;,
ISPICKVAL(StageName, &quot;Negotiation&quot;), OR(CONTAINS($UserRole.Name, &quot;GSS APAC&quot;),CONTAINS($UserRole.Name, &quot;GSS EMEA&quot;))
,(ISBLANK( Amount ) ||
ISBLANK( CloseDate ) ||
ISBLANK( ExpectedRevenue )
))</errorConditionFormula>
    <errorMessage>In order to move out of Stage “Presentation”, you must fill out the following fields: Amount, Expected Revenue</errorMessage>
</ValidationRule>