force-app/main/default/objects/Opportunity/validationRules/Line_of_Business_required_for_Closed_Won.validationRule-meta.xml
<ValidationRule>
    <fullName>Line_of_Business_required_for_Closed_Won</fullName>
    <active>true</active>
    <description>There must be a Line of Business record associated to this Opportunity before it can be changed to Closed-Won</description>
    <errorConditionFormula>AND(
$Profile.Name &lt;&gt; &#39;System Administrator&#39;,
ispickval( StageName , &#39;Closed Won&#39; ),
Line_of_Business__c  = NULL
)</errorConditionFormula>
    <errorMessage>There must be a Line of Business record associated to this Opportunity before it can be changed to Closed Won</errorMessage>
</ValidationRule>