force-app/main/default/objects/Opportunity/validationRules/Should_not_Change_Closed_lost_value.validationRule-meta.xml
<ValidationRule>
    <fullName>Should_not_Change_Closed_lost_value</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISCHANGED(StageName),
			ISPICKVAL(
					PRIORVALUE(StageName), &quot;Closed Lost&quot;)
					,
		OR( $Profile.Name =&quot;GSS Sales - NA&quot;,
			$Profile.Name =&quot;GSS Support - NA&quot;) 
			)</errorConditionFormula>
    <errorDisplayField>StageName</errorDisplayField>
    <errorMessage>Once an Opportunity has been Closed Lost, you cannot re-open it. A new Opportunity should be created.</errorMessage>
</ValidationRule>