force-app/main/default/objects/Opportunity/listViews/APAC_Technology_Opportunities.listView-meta.xml
<ListView>
    <fullName>APAC_Technology_Opportunities</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>Company_Region__c</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>OPPORTUNITY.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Opportunity.Technology</value>
    </filters>
    <filters>
        <field>Company_Region__c</field>
        <operation>equals</operation>
        <value>APAC</value>
    </filters>
    <label>APAC Technology Opportunities</label>
    <sharedTo>
        <role>APAC</role>
    </sharedTo>
</ListView>